--- a/quantri/css/dangnhap.css
+++ b/quantri/css/dangnhap.css
@@ -11,7 +11,7 @@ body{
 	font-family:Verdana, Geneva, sans-serif;
 	font-size:12px;
 	color:#666;
-	background:url(../anh/bg.gif) top left repeat;
+	background:url(..) top left repeat;
 	}
 
 /*---------------- Form Login -------------------*/
