--- a/quantri/css/danhsachnhomsp.css
+++ b/quantri/css/danhsachnhomsp.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 #main p#add-prd{
-	width:938px;
+	width:1138px;
 	height:auto;
 	text-align:right;
 	font-family:Verdana, Geneva, sans-serif;
@@ -18,13 +18,13 @@
 	}
 
 #main p#add-prd span{
-	background-image:-moz-linear-gradient(center bottom , #C40000 36%, #D64C4A 58%);
+	background-image:linear-gradient(#C40000 36%, #D64C4A 58%);
 	border-radius:6px 6px 6px 6px;
 	padding:5px 10px;
 	}
 
 #main table#prds{
-	width:938px;
+	width:1138px;
 	height:auto;
 	border-top:1px solid #CCC;
 	border-right:1px solid #CCC;
@@ -57,6 +57,12 @@
 	text-align:center;
 	}
 
+/*	--------------- Create on Octorber 17 -----------*/
+#main table#prds tr td a{
+	text-decoration: none;
+	color: darkolivegreen;
+}
+                   /*---------------------*/
 #main table#prds tr td span.thumb{
 	padding:5px 0px;
 	}
@@ -73,7 +79,7 @@
 	}
 
 p#pagination{
-	width:938px;
+	width:1138px;
 	height:auto;
 	text-align:right;
 	font-family:Verdana, Geneva, sans-serif;
@@ -91,6 +97,7 @@ p#pagination a{
 	color:#000;
 	text-decoration:none;
 	}
+
 
 
 
